--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,31 @@
 version: '3.3'
 services:
+ event_receiver:
+   image: event-receiver
+   ports:
+    - "8080:8080"
+   depends_on:
+    - "kafka"  
+ data_store:
+   image: data-store
+   ports:
+    - "8090:8090"
+   depends_on: 
+    - "kafka"
+    - "db"
+ processor:
+   image: processor
+   ports: 
+    - "8100:8100"
+   depends_on:
+    - "kafka"
+    - "data_store"
+ audit_log:
+   image: audit-log
+   ports:
+    - "8110:8110"
+   depends_on: 
+    - "kafka"
  zookeeper:
   image: wurstmeister/zookeeper
   ports:
@@ -12,11 +38,11 @@ services:
     - "9092:9092"
   hostname: kafka
   environment:
-   KAFKA_CREATE_TOPICS: "events:1:1" # topic:partition:replicas
-    KAFKA_ADVERTISED_HOST_NAME: <VM DNS Name> # docker-machine ip
+    KAFKA_CREATE_TOPICS: "events:1:1" # topic:partition:replicas
+    KAFKA_ADVERTISED_HOST_NAME: docker-3855.westus2.cloudapp.azure.com # docker-machine ip
     KAFKA_LISTENERS: INSIDE://:29092,OUTSIDE://:9092
     KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-    KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:29092,OUTSIDE://<VM DNS Name>:9092
+    KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:29092,OUTSIDE://docker-3855.westus2.cloudapp.azure.com:9092
     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
     KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
   volumes:
@@ -34,15 +60,15 @@ services:
     MYSQL_PASSWORD: 'password'
     # Password for root access
     MYSQL_ROOT_PASSWORD: 'password'
-    ports:
+  ports:
     # <Port exposed> : < MySQL Port running inside container>
-      - '3306:3306'
-    expose:
+    - '3306:3306'
+  expose:
     # Opens port 3306 on the container
-      - '3306'
+    - '3306'
     # Where our data will be persisted
-    volumes:
-      - my-db:/var/lib/mysql
+  volumes:
+    - my-db:/var/lib/mysql
     # Names our volume
 volumes:
  my-db:
